--- a/Application-Challenge/项目78-虎虎生威队-塔吊大师/MyAgora/app/src/main/res/layout/activity_call_operation.xml
+++ b/Application-Challenge/项目78-虎虎生威队-塔吊大师/MyAgora/app/src/main/res/layout/activity_call_operation.xml
@@ -119,6 +119,41 @@
 
         </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="@dimen/sw_20dp"
+            android:layout_height="@dimen/sw_20dp"
+            android:layout_marginEnd="@dimen/sw_35dp"
+            android:layout_marginBottom="@dimen/sw_5dp"
+            app:cardCornerRadius="@dimen/sw_10dp"
+            app:cardElevation="@dimen/sw_2dp"
+            app:layout_constraintBottom_toTopOf="@+id/cv_call_operation_construction"
+            app:layout_constraintEnd_toEndOf="@+id/cv_call_operation_construction">
+
+            <ImageView
+                android:id="@+id/iv_call_operation_sound"
+                android:layout_width="@dimen/sw_20dp"
+                android:layout_height="@dimen/sw_20dp"
+                android:padding="@dimen/sw_3dp"
+                android:src="@drawable/sound_open" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="@dimen/sw_20dp"
+            android:layout_height="@dimen/sw_20dp"
+            android:layout_marginStart="@dimen/sw_35dp"
+            android:layout_marginBottom="@dimen/sw_5dp"
+            app:cardCornerRadius="@dimen/sw_10dp"
+            app:cardElevation="@dimen/sw_2dp"
+            app:layout_constraintBottom_toTopOf="@+id/cv_call_operation_construction"
+            app:layout_constraintStart_toStartOf="@+id/cv_call_operation_construction">
+
+            <ImageView
+                android:id="@+id/iv_call_operation_network"
+                android:layout_width="@dimen/sw_20dp"
+                android:layout_height="@dimen/sw_20dp"
+                android:padding="@dimen/sw_3dp"
+                android:src="@drawable/net_word_4" />
+        </androidx.cardview.widget.CardView>
 
 
         <androidx.cardview.widget.CardView
