--- a/Application-Challenge/项目78-虎虎生威队-塔吊大师/MyAgora/app/src/main/res/layout/activity_register.xml
+++ b/Application-Challenge/项目78-虎虎生威队-塔吊大师/MyAgora/app/src/main/res/layout/activity_register.xml
@@ -96,6 +96,7 @@
         android:hint="@string/input_password"
         android:textSize="@dimen/sw_15sp"
         android:background="@null"
+        android:inputType="textPassword"
         />
 
     <ImageView
